Added certbot acme challange

--- a/nginx/conf.d/smart-recipe-landing.conf
+++ b/nginx/conf.d/smart-recipe-landing.conf
@@ -12,9 +12,9 @@ server {
         index  index.html index.htm;
     }
 
-    location /.well-known/acme-challenge/acme-challenge-example {
+    location /.well-known/acme-challenge/QYey_9GT45W9ImAEZ_oqBY9Ku-UnWQRnMbvT-f0lraM {
         add_header Content-Type text/plain;
-        return 200 'acme-challange-example';
+        return 200 'QYey_9GT45W9ImAEZ_oqBY9Ku-UnWQRnMbvT-f0lraM.chqeuY-I1y_-0ZeukYqxxzHtUnabW4GarPV5yk7xqiA';
     }
 
     #error_page  404              /404.html;
