--- a/nginx/conf.d/smart-recipe-landing.conf
+++ b/nginx/conf.d/smart-recipe-landing.conf
@@ -3,7 +3,7 @@ server {
     listen  [::]:80;
     server_name  localhost;
     
-    # return 301 https://$host$request_uri;
+    return 301 https://$host$request_uri;
 
     #access_log  /var/log/nginx/host.access.log  main;
 
@@ -50,22 +50,22 @@ server {
     #}
 }
 
-# server {
-#     listen       443 ssl;
-#     listen  [::]:443 ssl;
+server {
+    listen       443 ssl;
+    listen  [::]:443 ssl;
 
-#     server_name  localhost;
+    server_name  localhost;
 
-#     ssl_certificate   /etc/nginx/ssl/fullchain.pem;
-#     ssl_certificate_key /etc/nginx/ssl/privkey.pem;     
+    ssl_certificate   /etc/nginx/ssl/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/privkey.pem;     
 
-#     location / {
-#         root   /usr/share/nginx/html;
-#         index  index.html index.htm;
-#     }
+    location / {
+        root   /usr/share/nginx/html;
+        index  index.html index.htm;
+    }
 
-#      error_page  500 502 503 504  /50x.html;     
-#      location = /50x.html {
-#           root   /usr/share/nginx/html;
-#      }
-# }
+     error_page  500 502 503 504  /50x.html;     
+     location = /50x.html {
+          root   /usr/share/nginx/html;
+     }
+}
