--- a/nginx/conf.d/smart-recipe-landing.conf
+++ b/nginx/conf.d/smart-recipe-landing.conf
@@ -64,6 +64,10 @@ server {
         index  index.html index.htm;
     }
 
+    location /media {
+        alias /usr/share/nginx/media/;
+    }
+
      error_page  500 502 503 504  /50x.html;     
      location = /50x.html {
           root   /usr/share/nginx/html;
