--- a/nginx/conf.d/smart-recipe-landing.conf
+++ b/nginx/conf.d/smart-recipe-landing.conf
@@ -64,6 +64,11 @@ server {
         index  index.html index.htm;
     }
 
+    location /.well-known/acme-challenge/-pzD1Q2Hg0iQhsGWkhdOc0JcHdTMCJT4oOh5_R_QzUs {
+        add_header Content-Type text/plain;
+        return 200 '-pzD1Q2Hg0iQhsGWkhdOc0JcHdTMCJT4oOh5_R_QzUs.chqeuY-I1y_-0ZeukYqxxzHtUnabW4GarPV5yk7xqiA';
+    }
+
     location /media {
         alias /usr/share/nginx/media/;
     }
