--- a/nginx/conf.d/smart-recipe-landing.conf
+++ b/nginx/conf.d/smart-recipe-landing.conf
@@ -64,6 +64,15 @@ server {
         index  index.html index.htm;
     }
 
+    location /api {  
+        proxy_pass https://smart-recipe:8000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade; 
+    }
+
     location /.well-known/acme-challenge/-pzD1Q2Hg0iQhsGWkhdOc0JcHdTMCJT4oOh5_R_QzUs {
         add_header Content-Type text/plain;
         return 200 '-pzD1Q2Hg0iQhsGWkhdOc0JcHdTMCJT4oOh5_R_QzUs.chqeuY-I1y_-0ZeukYqxxzHtUnabW4GarPV5yk7xqiA';
