--- a/nginx/conf.d/smart-recipe-landing.conf
+++ b/nginx/conf.d/smart-recipe-landing.conf
@@ -17,6 +17,15 @@ server {
         return 200 '-pzD1Q2Hg0iQhsGWkhdOc0JcHdTMCJT4oOh5_R_QzUs.chqeuY-I1y_-0ZeukYqxxzHtUnabW4GarPV5yk7xqiA';
     }
 
+    location /api {  
+        proxy_pass http://smart-recipe:8000;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade; 
+    }
+
     #error_page  404              /404.html;
 
     # redirect server error pages to the static page /50x.html
@@ -65,7 +74,7 @@ server {
     }
 
     location /api {  
-        proxy_pass https://smart-recipe:8000;
+        proxy_pass http://smart-recipe:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
