--- a/nginx/conf.d/smart-recipe-landing.conf
+++ b/nginx/conf.d/smart-recipe-landing.conf
@@ -18,7 +18,7 @@ server {
     }
 
     location /api {  
-        proxy_pass http://smart-recipe:8000;
+        proxy_pass http://smart-recipe.ru:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
@@ -74,7 +74,7 @@ server {
     }
 
     location /api {  
-        proxy_pass http://smart-recipe:8000;
+        proxy_pass http://smart-recipe.ru:8000;
         proxy_http_version 1.1;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
