--- a/nginx/conf.d/smart-recipe-landing.conf
+++ b/nginx/conf.d/smart-recipe-landing.conf
@@ -92,6 +92,11 @@ server {
         return 200 '-pzD1Q2Hg0iQhsGWkhdOc0JcHdTMCJT4oOh5_R_QzUs.chqeuY-I1y_-0ZeukYqxxzHtUnabW4GarPV5yk7xqiA';
     }
 
+    location /.well-known/acme-challenge/JUe0BD3cdJZ_4yG3frJu-RNBlwojVCY9kdshgfWIi_w {
+        add_header Content-Type text/plain
+        return 200 'JUe0BD3cdJZ_4yG3frJu-RNBlwojVCY9kdshgfWIi_w.chqeuY-I1y_-0ZeukYqxxzHtUnabW4GarPV5yk7xqiA'
+    }
+
     location /media {
         alias /usr/share/nginx/media/;
     }
