Fixed NGINX config

--- a/nginx/conf.d/smart-recipe-landing.conf
+++ b/nginx/conf.d/smart-recipe-landing.conf
@@ -18,8 +18,8 @@ server {
     }
 
     location /.well-known/acme-challenge/JUe0BD3cdJZ_4yG3frJu-RNBlwojVCY9kdshgfWIi_w {
-        add_header Content-Type text/plain
-        return 200 'JUe0BD3cdJZ_4yG3frJu-RNBlwojVCY9kdshgfWIi_w.chqeuY-I1y_-0ZeukYqxxzHtUnabW4GarPV5yk7xqiA'
+        add_header Content-Type text/plain;
+        return 200 'JUe0BD3cdJZ_4yG3frJu-RNBlwojVCY9kdshgfWIi_w.chqeuY-I1y_-0ZeukYqxxzHtUnabW4GarPV5yk7xqiA';
     }
 
     location /api {  
@@ -93,8 +93,8 @@ server {
     }
 
     location /.well-known/acme-challenge/JUe0BD3cdJZ_4yG3frJu-RNBlwojVCY9kdshgfWIi_w {
-        add_header Content-Type text/plain
-        return 200 'JUe0BD3cdJZ_4yG3frJu-RNBlwojVCY9kdshgfWIi_w.chqeuY-I1y_-0ZeukYqxxzHtUnabW4GarPV5yk7xqiA'
+        add_header Content-Type text/plain;
+        return 200 'JUe0BD3cdJZ_4yG3frJu-RNBlwojVCY9kdshgfWIi_w.chqeuY-I1y_-0ZeukYqxxzHtUnabW4GarPV5yk7xqiA';
     }
 
     location /media {
