--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "dependencies": {
     "axios": "^1.6.8",
     "vue": "^3.3.11",
-    "vue-axios": "^3.5.2"
+    "vue-axios": "^3.5.2",
+    "vue-i18n": "^9.13.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.5.2",
